--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 certifi==2018.8.24
 chardet==3.0.4
-idna==2.6
-requests==2.18.4
-urllib3==1.22
-virtualenv==16.0.0
+client==0.0.1
+idna==2.7
+requests==2.19.1
+urllib3==1.23
